--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,8 @@ jobs:
         uses: actions/setup-python@v3.1.1
       
       - name: Run
-        run: python download.py
+        run:  pip install -r requirements.txt
+              | python download.py
         
       - name: Upload a Build Artifact
         uses: actions/upload-artifact@v3.0.0
